--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,7 +1,14 @@
 upstream ecosysfront {
     server ecosysfront:80;
+    
+}
+upstream auth {
+    server auth:8080;
 }
 
+upstream excel {
+    server excel:8081;
+}
 server {
     
     listen 443 ssl;
@@ -11,6 +18,24 @@ server {
 
     ssl_certificate /etc/nginx/ssl/certificate.crt;
     ssl_certificate_key /etc/nginx/ssl/_.ecosynergia.org_private_key.key;
+
+        location /auth {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_buffering off;
+        proxy_redirect off;
+        proxy_pass http://auth;
+        }
+
+    location /api/excel {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_buffering off;
+        proxy_redirect off;
+        proxy_pass http://excel;
+        }
 
         location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
