--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -37,6 +37,42 @@ server {
         proxy_pass http://excel;
         }
 
+    location /api/operadores {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_buffering off;
+        proxy_redirect off;
+        proxy_pass http://excel;
+        }
+
+    location /api/destinos {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_buffering off;
+        proxy_redirect off;
+        proxy_pass http://excel;
+        }
+
+    location /api/clientes {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_buffering off;
+        proxy_redirect off;
+        proxy_pass http://excel;
+        }
+        
+    location /api/folios {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_buffering off;
+        proxy_redirect off;
+        proxy_pass http://excel;
+        }
+
         location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
