--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -23,6 +23,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_buffering off;
         proxy_redirect off;
         proxy_pass http://auth;
@@ -32,8 +33,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_buffering off;
-        proxy_redirect off;
         proxy_pass http://excel;
     }
 
@@ -41,6 +42,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_buffering off;
         proxy_redirect off;
         proxy_pass http://ecosysfront;
